[package]
name = "mulltray"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mulltray"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
tonic = "0.11"
prost = "0.12"
prost-types = "0.12.4"
ksni = "0.2.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"

[build-dependencies]
tonic-build = "0.11"
